Added DirtyNotesProcessorJob, improvements and bug fixes